[tool.poetry]
name = "btc-RL"
version = "0.1.0"
description = ""
authors = ["gregory.guichard <gregory.guichard@cdbdx.biz>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
jupyterlab = "^3.4.3"
pandas = "^1.4.2"
tensorflow = "^2.9.1"
stable-baselines3 = "^1.5.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
